# auto-car-plattform

./: .gitignore
Microcontroller/Uno/ackermann_debug/: ackermann_debug.ino
Microcontroller/Uno/ackermann_debug/ackermann_debug_self_time/: ackermann_debug_self_time.ino
Microcontroller/Uno/ros/uno_ackermann_msg_check/: uno_ackermann_msg_check.ino
Microcontroller/Uno/ros/uno_helloworld/: uno_helloworld.ino
Microcontroller/Uno/uno_calibration/uno_servo_calibration/: uno_servo_calibration.ino
Microcontroller/Uno/uno_helloworld/: uno_helloworld.ino
Microcontroller/Uno/uno_ros/uno_ackermann_debug/: uno_ackermann_debug.ino
Microcontroller/stm32g431kb/: stm32g431kb_helloworld.ino
Microcontroller/stm32g431kb/stm32g413kb_pwm/: stm32g413kb_pwm.ino
Microcontroller/stm32g431kb/stm32g413kb_pwm/angle_calibr/: angle_calibr.ino
catkin_ws/devel/: .catkin
catkin_ws/devel/include/aruco_ros/: ArucoThresholdConfig.h
catkin_ws/devel/lib/ackermann_control/: arming_controller.py  car_controller.py
catkin_ws/devel/lib/ackermann_pub/: driver.py
catkin_ws/devel/lib/aruco_ros/: double  marker_publisher  single
catkin_ws/devel/lib/localizer/: talker
catkin_ws/devel/lib/pkgconfig/: ackermann_pub.pc  (+5 more)
catkin_ws/src/ackermann_control/: CMakeLists.txt
catkin_ws/src/ackermann_pub/: CMakeLists.txt
catkin_ws/src/localizer/: CMakeLists.txt  package.xml
catkin_ws/src/localizer/launch/: localizer.launch  localizer_adj.launch
catkin_ws/src/localizer/src/: localizer.cpp  localizer_ref_adjusted.cpp  talker.cpp
catkin_ws/src/position_controller/: CMakeLists.txt  package.xml
(+18 files in other folders)
